--- a/Areas/User/Views/Shared/_Layout.cshtml
+++ b/Areas/User/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <title>Ogani | Template</title>
 
     <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
-
     <!-- Css Styles -->
     <link rel="stylesheet" href="~/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/font-awesome.min.css" type="text/css">
@@ -109,7 +109,6 @@
     <!-- End Footer -->
     
     <!-- Js Plugins -->
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/jquery.nice-select.min.js"></script>
@@ -118,7 +117,8 @@
     <script src="~/js/mixitup.min.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="~/js/deleteWarningBox.js"></script>
+    <script src="~/js/userDeleteWarningBox.js"></script>
+    <script src="~/js/productInteraction.js"></script>
     <script src="~/js/main.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
