--- a/Areas/User/Views/Shop/Details.cshtml
+++ b/Areas/User/Views/Shop/Details.cshtml
@@ -44,10 +44,8 @@
                             <span>(18 reviews)</span>
                         </div>
                         <div class="product__details__price">@String.Format("{0:0,0} đ", int.Parse(ViewBag.Cart.Camera.Price))</div>
-                        <p>
-                            <span style="margin-right: 6px"><strong>Brand:</strong> @ViewBag.Cart.Camera.BrandName</span>
-                            <span><strong>Category:</strong> @ViewBag.Cart.Camera.Category</span>
-                        </p>
+                        <p style="margin-bottom: 0"><strong>Brand:</strong> @ViewBag.Cart.Camera.BrandName</p>
+                        <p style="margin-bottom: 0"><strong>Category:</strong> @ViewBag.Cart.Camera.Category</p>
                         <ul>
                             @for(int i = 0; i < 3; i++) {
                                 <li>@features[i]</li>
@@ -69,7 +67,6 @@
                             <li><b>Amount</b> <span>@ViewBag.Cart.Camera.Amount</span></li>
                             <li><b>Availability</b> <span>@(ViewBag.Cart.Camera.Amount == 0 ? "Out of stock" : "In stock")</span></li>
                             <li><b>Shipping</b> <span>01 day shipping. <samp>Free pickup today</samp></span></li>
-                            <li><b>Weight</b> <span>0.5 kg</span></li>
                         </ul>
                     </div>
                 </div>
@@ -122,7 +119,7 @@
                             </div>
                             <div class="tab-pane active" id="tabs-3" role="tabpanel">
                                 <div class="product__details__tab__desc">
-                                    <h6>Products Infomation</h6>
+                                    <h6>Products Review</h6>
                                 </div>
                             </div>
                         </div>
