--- a/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,9 +7,10 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ogani | Template</title>
+    <title></title>
 
     <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
@@ -105,15 +106,14 @@
     <!-- End Footer -->
     
     <!-- Js Plugins -->
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/jquery.slicknav.js"></script>
     <script src="~/js/jquery-ui.min.js"></script>
     <script src="~/js/owl.carousel.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="~/js/deleteWarningBox.js"></script>
+    <script src="~/js/adminDeleteWarningBox.js"></script>
     <partial name="~/Views/Shared/_ValidationScriptsPartial.cshtml" />
     <script src="~/js/main.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
