--- a/Areas/Identity/Pages/Shared/_Layout.cshtml
+++ b/Areas/Identity/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>Identify User</title>
 
     <!-- Google Font -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
