--- a/Areas/User/Views/Home/Index.cshtml
+++ b/Areas/User/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                 @foreach(var item in ViewBag.Cameras) {
                     <div class="col-lg-3">
                         <div class="categories__item set-bg" data-setbg="@item.ImageUrls.Split(';')[0]">
-                            <h5><a href="User/Shop/Details/?cameraId=@item.Id">@item.Name</a></h5>
+                            <h5><a href="/User/Shop/Details/?cameraId=@item.Id">@item.Name</a></h5>
                         </div>
                     </div>
                 }
@@ -56,11 +56,11 @@
                     <div class="featured__item">
                         <div class="featured__item__pic set-bg" data-setbg="@item.ImageUrls.Split(';')[0]">
                             <ul class="featured__item__pic__hover">
-                                <li><a href="#"><i class="fa fa-heart"></i></a></li>
+                                <li><a class="like-btn" data-cameraid="@item.Id" data-liked="false"><i class="fa fa-heart"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
-                            <h6><a href="User/Shop/Details/?cameraId=@item.Id">@item.Name</a></h6>
+                            <h6><a href="/User/Shop/Details/?cameraId=@item.Id">@item.Name</a></h6>
                             <h5>@String.Format("{0:0,0} đ", int.Parse(item.Price))</h5>
                         </div>
                     </div>
