--- a/Areas/Identity/Pages/Shared/_Layout.cshtml
+++ b/Areas/Identity/Pages/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
 </head>
 <body>
     <!-- Begin Main-->
-    <div class="container" style="padding-left: 0px; padding-right: 0px">
-        <main role="main" class="pb-3">
+    <div class="container d-flex align-items-center justify-content-center" style="width: 100%; height: 100vh; padding-left: 0px; padding-right: 0px">
+        <main role="main" class="container pb-3">
             @RenderBody()
         </main>
     </div>
