--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -179,9 +179,9 @@ ul li {
 	width: 100%;
 }
 
-	.image-container img {
-		width: 90%;
-	}
+.image-container img {
+	width: 90%;
+}
 
 .card {
 	padding: 12px 0;
@@ -320,10 +320,47 @@ ol {
 	margin: 0;
 }
 
+.review-user-avatar {
+	width: 50px;
+	height: 50px;
+	background-color: #7fad39;
+	border-radius: 50%;
+	flex-shrink: 1;
+	flex-basis: 50px;
+}
+
+.review-text p {
+	margin-bottom: 0;
+}
+
+.review-user-name {
+	font-size: 1.3rem;
+	font-weight: 700;
+}
+
+.review-text {
+	max-width: 300px;
+	min-width: 300px;
+}
+
+.review-date {
+	font-weight: 600;
+	font-size: 0.81rem;
+}
+
+#inputReviewBox {
+	width: 100%;
+	height: 150px;
+	padding: 8px;
+	resize: none;
+}
+
+.delete-review-button {
+	cursor: pointer;
+}
 /*---------------------
   Helper CSS
 -----------------------*/
-
 .section-title {
 	margin-bottom: 50px;
 	text-align: center;
